--- a/Amber/Amber.vcxproj
+++ b/Amber/Amber.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>precHeaders.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>AM_PLATFORM_WINDOWS;AM_BUILD_DLL;GLFW_INCLUDE_NONE;AM_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -98,7 +98,7 @@
       <PrecompiledHeaderFile>precHeaders.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>AM_PLATFORM_WINDOWS;AM_BUILD_DLL;GLFW_INCLUDE_NONE;AM_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -123,7 +123,7 @@
       <PrecompiledHeaderFile>precHeaders.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>AM_PLATFORM_WINDOWS;AM_BUILD_DLL;GLFW_INCLUDE_NONE;AM_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -143,17 +143,10 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Amber\Core\Timestep.h" />
-    <ClInclude Include="src\Amber\Renderer\OrthographicCamera.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\Amber\Renderer\RenderCommand.h" />
-    <ClInclude Include="src\Amber\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
-    <ClInclude Include="src\Amber\Renderer\Renderer.h" />
     <ClInclude Include="src\Amber.h" />
     <ClInclude Include="src\Amber\Application.h" />
     <ClInclude Include="src\Amber\Core.h" />
+    <ClInclude Include="src\Amber\Core\Timestep.h" />
     <ClInclude Include="src\Amber\EntryPoint.h" />
     <ClInclude Include="src\Amber\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Amber\Events\Event.h" />
@@ -168,24 +161,26 @@
     <ClInclude Include="src\Amber\MouseButtonCodes.h" />
     <ClInclude Include="src\Amber\Renderer\Buffer.h" />
     <ClInclude Include="src\Amber\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Amber\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\Amber\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Amber\Renderer\Renderer.h" />
+    <ClInclude Include="src\Amber\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Amber\Renderer\Shader.h" />
+    <ClInclude Include="src\Amber\Renderer\Texture.h" />
+    <ClInclude Include="src\Amber\Renderer\VertexArray.h" />
     <ClInclude Include="src\Amber\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\precHeaders.h" />
-    <ClInclude Include="src\Amber\Renderer\VertexArray.h" />
+    <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Amber\Renderer\OrthographicCamera.cpp" />
-    <ClCompile Include="src\Amber\Renderer\Shader.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
-    <ClCompile Include="src\Amber\Renderer\RenderCommand.cpp" />
-    <ClCompile Include="src\Amber\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
-    <ClCompile Include="src\Amber\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Amber\Application.cpp" />
     <ClCompile Include="src\Amber\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Amber\ImGui\ImGuiLayer.cpp" />
@@ -193,14 +188,26 @@
     <ClCompile Include="src\Amber\LayerStack.cpp" />
     <ClCompile Include="src\Amber\Log.cpp" />
     <ClCompile Include="src\Amber\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Amber\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Amber\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Amber\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Amber\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\Amber\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Amber\Renderer\Texture.cpp" />
+    <ClCompile Include="src\Amber\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\precHeaders.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="src\Amber\Renderer\VertexArray.cpp" />
+    <ClCompile Include="vendor\glm\glm\detail\glm.cpp" />
+    <ClCompile Include="vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
