--- a/Amber/Amber.vcxproj.filters
+++ b/Amber/Amber.vcxproj.filters
@@ -1,128 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Amber">
-      <UniqueIdentifier>{8CACD40C-F8C0-FCBD-C142-A01D2D16F9EE}</UniqueIdentifier>
+    <Filter Include="src">
+      <UniqueIdentifier>{2DAB880B-99B4-887C-2230-9F7C8E38947C}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Amber\Events">
-      <UniqueIdentifier>{F042D110-DCA5-60B5-852B-996B716D2C38}</UniqueIdentifier>
+    <Filter Include="src\Amber">
+      <UniqueIdentifier>{E3BA91B2-4F25-4629-9863-F7CE040D247E}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Amber\ImGui">
-      <UniqueIdentifier>{B65A8708-2210-00FE-AB04-FAD417B9F601}</UniqueIdentifier>
+    <Filter Include="src\Amber\Core">
+      <UniqueIdentifier>{1B25B2E9-07F3-A5EF-F086-1616DCF38154}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Platform">
-      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    <Filter Include="src\Amber\Events">
+      <UniqueIdentifier>{67E9F123-53E2-1076-7C14-F6FA686CF081}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Platform\Windows">
-      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    <Filter Include="src\Amber\ImGui">
+      <UniqueIdentifier>{4D8E6120-B919-CFE4-C22A-52D92E352BE5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Amber\Renderer">
+      <UniqueIdentifier>{E9ED0CDF-D5D1-CD34-3E32-C8872A35B8B6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform">
+      <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform\Windows">
+      <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor">
+      <UniqueIdentifier>{B3738122-9F15-ACF8-88D0-BF4C74113349}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor\glm">
+      <UniqueIdentifier>{829FC5A8-6E57-07F6-D75E-E051C335A2E6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor\glm\glm">
+      <UniqueIdentifier>{D11AC9C9-BDE8-BCCF-A67C-2DF692E99834}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor\glm\glm\detail">
+      <UniqueIdentifier>{739DA071-DF09-5C6C-A8FD-F3C914297ED4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor\stb_image">
+      <UniqueIdentifier>{0DA0BA59-F998-D9AB-22CB-BE300E23B9B7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Amber.h" />
+    <ClInclude Include="src\Amber.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="src\Amber\Application.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Core.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Core\Timestep.h">
+      <Filter>src\Amber\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\EntryPoint.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Events\ApplicationEvent.h">
-      <Filter>Amber\Events</Filter>
+      <Filter>src\Amber\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Events\Event.h">
-      <Filter>Amber\Events</Filter>
+      <Filter>src\Amber\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Events\KeyEvent.h">
-      <Filter>Amber\Events</Filter>
+      <Filter>src\Amber\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Events\MouseEvent.h">
-      <Filter>Amber\Events</Filter>
+      <Filter>src\Amber\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\ImGui\ImGuiLayer.h">
-      <Filter>Amber\ImGui</Filter>
+      <Filter>src\Amber\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Input.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\KeyCodes.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Layer.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\LayerStack.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Log.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\MouseButtonCodes.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\Buffer.h">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\GraphicsContext.h">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\OrthographicCamera.h">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\RenderCommand.h">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\Renderer.h">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\RendererAPI.h">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\Shader.h">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\Texture.h">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\Renderer\VertexArray.h">
+      <Filter>src\Amber\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\Amber\Window.h">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
-      <Filter>Platform\Windows</Filter>
+      <Filter>src\Platform\Windows</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
-      <Filter>Platform\Windows</Filter>
+      <Filter>src\Platform\Windows</Filter>
     </ClInclude>
-    <ClInclude Include="src\precHeaders.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\Amber\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Amber\Renderer\Shader.h" />
-    <ClInclude Include="src\Amber\Renderer\Buffer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\Amber\Renderer\Renderer.h" />
-    <ClInclude Include="src\Amber\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
-    <ClInclude Include="src\Amber\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Amber\Renderer\RenderCommand.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\Amber\Renderer\OrthographicCamera.h" />
-    <ClInclude Include="src\Amber\Core\Timestep.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\precHeaders.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\stb_image\stb_image.h">
+      <Filter>vendor\stb_image</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Amber\Application.cpp">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClCompile>
     <ClCompile Include="src\Amber\ImGui\ImGuiBuild.cpp">
-      <Filter>Amber\ImGui</Filter>
+      <Filter>src\Amber\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Amber\ImGui\ImGuiLayer.cpp">
-      <Filter>Amber\ImGui</Filter>
+      <Filter>src\Amber\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Amber\Layer.cpp">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClCompile>
     <ClCompile Include="src\Amber\LayerStack.cpp">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
     </ClCompile>
     <ClCompile Include="src\Amber\Log.cpp">
-      <Filter>Amber</Filter>
+      <Filter>src\Amber</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Amber\Renderer\Buffer.cpp">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Amber\Renderer\OrthographicCamera.cpp">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Amber\Renderer\RenderCommand.cpp">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Amber\Renderer\Renderer.cpp">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Amber\Renderer\RendererAPI.cpp">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Amber\Renderer\Shader.cpp">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Amber\Renderer\Texture.cpp">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Amber\Renderer\VertexArray.cpp">
+      <Filter>src\Amber\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
-      <Filter>Platform\Windows</Filter>
+      <Filter>src\Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
-      <Filter>Platform\Windows</Filter>
+      <Filter>src\Platform\Windows</Filter>
     </ClCompile>
-    <ClCompile Include="src\precHeaders.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
-    <ClCompile Include="src\Amber\Renderer\Buffer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\Amber\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\Amber\Renderer\VertexArray.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
-    <ClCompile Include="src\Amber\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Amber\Renderer\RenderCommand.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
-    <ClCompile Include="src\Amber\Renderer\OrthographicCamera.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
-    <ClCompile Include="src\Amber\Renderer\Shader.cpp" />
+    <ClCompile Include="src\precHeaders.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="vendor\glm\glm\detail\glm.cpp">
+      <Filter>vendor\glm\glm\detail</Filter>
+    </ClCompile>
+    <ClCompile Include="vendor\stb_image\stb_image.cpp">
+      <Filter>vendor\stb_image</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
