--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=27,207
-Size=410,471
+Pos=952,3
+Size=327,450
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
@@ -35,12 +35,11 @@ Size=249,94
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
 [Window][Color Settings]
-Pos=60,60
+Pos=2,2
 Size=308,134
 Collapsed=0
 
@@ -123,7 +122,7 @@ Column 5  Width=112
 Column 6  Width=112
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=41,89 Size=1280,701 Split=X
+DockSpace     ID=0x3BC79352 Pos=41,89 Size=1280,701 Split=X
   DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=375,701 Selected=0xDBFE1153
   DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=903,701 Split=Y
     DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=542,691 CentralNode=1
